# coffee

./: .babelrc  .coveragerc  .gitignore  Dockerfile  Pipfile  README.md  achievements.py  authentication.py  coffee.py  coffee_tests.py  config.py  database.py  database_mongo.py  docker-compose.yml  ldap_test_data.ldif  package-lock.json  package.json  pyproject.toml  requirements.md  requirements.txt  start-dev.sh  transferdb.py  transfermongo.py  webpack.config.js
static/: plots.js  site.css  site.js
static/admin/: ListOfShame.js  admin.js
static/app/: Achievement.js  AddButton.js  Alert.js  Carousel.js  Icon.js  List.js  Row.js  ServiceButton.js  app.js  config.js
static/css/: site.css
templates/: admin.html  app.html  coffee_mail  consumption_list.html  default.html  global.html  list.tex  login.html  lowbudget_mail  payment_mail  personal.html  service.tex  site.html  user.html
templates/admin/: base.html
templates/mail/: base  lowbudget  payment
testing/: .env-template  ldap_delete.ldif  ldap_test_data.ldif
