[tool.poetry]
name = "coffee"
version = "0.4.0"
description = ""
authors = ["Kevin Heinicke <kevin@kehei.de>"]

[tool.poetry.dependencies]
python = "^3.7"
mongoengine = "^0.24"
flask-mongoengine = "^1.0"
ldap3 = "^2.9"
pendulum = "^2.1"
flask = "^2.1"
flask-admin = "^1.6"
flask-login = "^0.6.0"

[tool.poetry.dev-dependencies]
coverage = "^6"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
